syntax = "proto3";
import "google/protobuf/empty.proto";
package agl_shell_ipc;

service AglShellManagerService {
       rpc ActivateApp(ActivateRequest)        returns (google.protobuf.Empty) {}
       rpc DeactivateApp(DeactivateRequest)    returns (google.protobuf.Empty) {}
       rpc SetAppSplit(SplitRequest)           returns (google.protobuf.Empty) {}
       rpc SetAppFloat(FloatRequest)           returns (google.protobuf.Empty) {}
}

message ActivateRequest {
       string app_id = 1;
       string output_name = 2;
}

message DeactivateRequest {
       string app_id = 1;
}

message SplitRequest {
       string app_id = 1;
       int32 tile_orientation = 2;
}

message FloatRequest {
       string app_id = 1;
}

